Corrected some alignment and product image issue

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -22,9 +22,19 @@ p.price .text-muted{
 	max-height: 350px;
 	width: auto;
 }
-.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+/*.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     height: 330px;
 }
-/*div.front {
+div.front {
 	text-align: center;
 }*/
+em {
+    padding: 2px 4px;
+    color: #EA1F00;
+    background-color: #F7F7F7;
+    border: 1px solid #E1E1E8;
+    font-style: normal;
+    font-weight: 600;
+    border-radius: 3px;
+    letter-spacing: 1.5px;
+}
